--- a/CSS 1/Style.css
+++ b/CSS 1/Style.css
@@ -4,6 +4,7 @@ body{
     background-image: url("back2.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }h1, h2{
     color: #110435;
